# TriArt

./: .gitignore  README.md  lefthook.yml  pyproject.toml
.github/workflows/: actions-security.yml  ci.yml
TriArt/: .gitignore  README.md  pyproject.toml
TriArt/src/triart/: __init__.py  __main__.py  polygonizer.py
src/triart/: __init__.py  __main__.py  polygonizer.py
tests/: test_polygonizer.py
