[project]
name = "triart"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "blck-snwmn", email = "whitesnowmancreator@gmail.com" }
]
dependencies = [
    "opencv-python-headless==4.11.0.86",
    "numpy==2.4.0",
    "scipy==1.16.3",
    "matplotlib==3.10.8",
]
readme = "README.md"
requires-python = "==3.14.6"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/triart"]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "ruff==0.14.10",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
