[project]
name = "triart"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "blck-snwmn", email = "whitesnowmancreator@gmail.com" }
]
dependencies = [
    "opencv-python-headless>=4.9.0.80",
    "numpy>=1.26.4",
    "scipy>=1.13.0",
    "matplotlib>=3.8.4",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
"triart" = "triart:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/triart"]
